--- a/templates/employees/employeeportal.html
+++ b/templates/employees/employeeportal.html
@@ -6,8 +6,10 @@
 <body>
 {{name}}'s employee portal
 
-<form action="{{url_for('datahandlers.addemployer')}}">
+<form action="{{url_for('datahandlers.addemployer')}}" method="post">
     <input type="text" name="employers_id" placeholder="employers id">
+    <input type="text" name="email" placeholder="confirm email">
+    <input type="text" name="password" placeholder="confirm password">
     <input type="submit">
     
 </form>
