--- a/templates/employees/employeeportal.html
+++ b/templates/employees/employeeportal.html
@@ -5,13 +5,16 @@
 </head>
 <body>
 {{name}}'s employee portal
-
-<form action="{{url_for('datahandlers.addemployer')}}" method="post">
+<form action="{{url_for('datahandlers.addemployer', token=token)}}" method="post">
     <input type="text" name="employers_id" placeholder="employers id">
-    <input type="text" name="email" placeholder="confirm email">
-    <input type="text" name="password" placeholder="confirm password">
     <input type="submit">
-    
 </form>
+<h2>Employers</h2>
+<ul>
+{% for employer in employers %}
+    {% set return = db.main.employer.find_one({"id": employer}) %}
+    <li>{{return["name"]}}</li>
+{% endfor %}
+</ul>
 </body>
 </html>
