--- a/templates/jobs/job_main.html
+++ b/templates/jobs/job_main.html
@@ -4,19 +4,27 @@
 <title>Job portal</title>
 </head>
 <body>
+
 <h4>Owner is: {{owner}}</h4>
 <h4>
 Add Job
 </h4>
-<form action="{{url_for('datahandlers.job_employee_add', token_sent=your_token)}}" method="post">
-    <input type="text" name="job_name" placeholder="Job name">
+<form action="{{url_for('datahandlers.job_add_employee', job_id_sent=job_id, owner_sent=owner_token)}}" method="post">
+    <label for="Employee">Choose employee</label>
+    <select name="Employee" id="Employee">
+        {% for employee in employer_employees %}
+            {% set employee_results=db.main.employee.find_one({"id": employee}) %}
+            {% set employee_name=employee_results["name"] %}
+            <option value="{{employee_results['id']}}">{{employee_name}}</option>
+        {% endfor %}
     <input type="submit">
 </form>
 
 <h3>Employees:</h3>
 <ul>
-{% for employee in employees %}
-<li>{{employee}}</li>
+{% for employee_id in job_employees %}
+    {% set employee_name_get = db.main.employee.find_one({"id": employee_id}) %}
+    <li>{{employee_name_get['name']}}</li>
 {% endfor %}
 </ul>
 </body>
