--- a/templates/employees/employee_signup.html
+++ b/templates/employees/employee_signup.html
@@ -7,7 +7,7 @@ Employee Sign up
 </head>
 <body>
 <h1>Employee Sign up</h1>
-<form action="{{url_for('datahandlers.employeesignupdata')}}" method="post">
+<form action="{{url_for('employee_login_and_signup.employeesignupdata')}}" method="post">
 <input type="text" name="name" placeholder="Enter your name">
 <input type="text" name="email" placeholder="Enter your email">
 <input type="text" name="phone" placeholder="Enter your phone">
