--- a/templates/employers/employer_signup.html
+++ b/templates/employers/employer_signup.html
@@ -7,7 +7,7 @@ employer sign up
 </head>
 <body>
 <h1>employer sign up</h1>
-<form action="{{url_for('datahandlers.employersignupdata')}}" method="post">
+<form action="{{url_for('employer_signup_and_login.employersignupdata')}}" method="post">
 <input type="text" name="name" placeholder="Enter your name">
 <input type="text" name="email" placeholder="Enter your email">
 <input type="text" name="phone" placeholder="Enter your phone">
