--- a/templates/getstarted.html
+++ b/templates/getstarted.html
@@ -9,13 +9,13 @@ Log in or sign up
 <h3>Login or sign up</h3>
 <body>
     <h5>Employers</h5>
-    <a href="{{url_for('employers.employersignup')}}">Sign up as employer</a>
+    <a href="{{url_for('employer_routes.employersignup')}}">Sign up as employer</a>
     <br>
-    <a href="{{url_for('employers.employerlogin')}}">Sign in as employer</a>
+    <a href="{{url_for('employer_routes.employerlogin')}}">Sign in as employer</a>
     <br>
     <h5>Employees</h5>
-    <a href="{{url_for('employees.employeesignup')}}">Sign up as employee</a>
+    <a href="{{url_for('employee_routes.employeesignup')}}">Sign up as employee</a>
     <br>
-    <a href="{{url_for('employees.employeelogin')}}">Sign in as employee</a>
+    <a href="{{url_for('employee_routes.employeelogin')}}">Sign in as employee</a>
 </body>
 </html>
