--- a/templates/employers/employerlogin.html
+++ b/templates/employers/employerlogin.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Employer Login</h1>
-<form action="{{url_for('datahandlers.employerlogindata')}}" method="post">
+<form action="{{url_for('employer_signup_and_login.employerlogindata')}}" method="post">
 <input type="text" name="email" placeholder="email">
 <input type="text" name="password" placeholder="Password">
 <input type="submit">
