--- a/templates/employers/manage_employee.html
+++ b/templates/employers/manage_employee.html
@@ -7,7 +7,7 @@ Manage {{employee_results_sent['name']}}
 </head>
 <body>
 
-<form action="{{url_for('datahandlers.fire_employee', employee_id_sent=employee_results_sent['id'], employer_token_sent=employer_results_sent['token'])}}", method="post">
+<form action="{{url_for('employer_datahandlers.fire_employee', employee_id_sent=employee_results_sent['id'], employer_token_sent=employer_results_sent['token'])}}", method="post">
 <input type="submit" name="manage_employee" value='Fire'>
 </form>
 </body>
