--- a/templates/jobs/job_main.html
+++ b/templates/jobs/job_main.html
@@ -9,7 +9,7 @@
 <h4>
 Add Job
 </h4>
-<form action="{{url_for('datahandlers.job_add_employee', job_id_sent=job_id, owner_sent=owner_token)}}" method="post">
+<form action="{{url_for('job_datahandlers.job_add_employee', job_id_sent=job_id, owner_sent=owner_token)}}" method="post">
     <label for="Employee">Choose employee</label>
     <select name="Employee" id="Employee">
         {% for employee in employer_employees %}
