--- a/templates/employees/employeeportal.html
+++ b/templates/employees/employeeportal.html
@@ -5,7 +5,8 @@
 </head>
 <body>
 {{name}}'s employee portal
-<h5>your token is {{your_token}}
+<h5>your token is {{your_token}}</h5>
+<h5> your id is {{your_id}}
 <form action="{{url_for('employee_datahandlers.addemployer', token_sent=your_token)}}" method="post">
     <input type="text" name="employers_id" placeholder="employers id">
     <input type="submit">
