--- a/templates/jobs/job_main.html
+++ b/templates/jobs/job_main.html
@@ -7,12 +7,27 @@
 
 <h4>Owner is: {{owner}}</h4>
 <h4>
-Add Job
+Add EMployee
 </h4>
 <form action="{{url_for('job_datahandlers.job_add_employee', job_id_sent=job_id, owner_sent=owner_token)}}" method="post">
     <label for="Employee">Choose employee</label>
     <select name="Employee" id="Employee">
         {% for employee in employer_employees %}
+            {% set employee_results=db.main.employee.find_one({"id": employee}) %}
+            {% set employee_name=employee_results["name"] %}
+            <option value="{{employee_results['id']}}">{{employee_name}}</option>
+        {% endfor %}
+    <input type="submit">
+</form>
+
+<h4>
+Remove Employee
+</h4>
+<form action="{{url_for('job_datahandlers.job_remove_employee', job_id_sent=job_id, owner_sent=owner_token)}}" method="post">
+    <label for="Employee">Choose employee</label>
+    <select name="Employee" id="Employee">
+
+        {% for employee in job_employees %}
             {% set employee_results=db.main.employee.find_one({"id": employee}) %}
             {% set employee_name=employee_results["name"] %}
             <option value="{{employee_results['id']}}">{{employee_name}}</option>
