fixed spelling mistake

--- a/templates/jobs/job_main.html
+++ b/templates/jobs/job_main.html
@@ -7,7 +7,7 @@
 
 <h4>Owner is: {{owner}}</h4>
 <h4>
-Add EMployee
+Add Employee
 </h4>
 <form action="{{url_for('job_datahandlers.job_add_employee', job_id_sent=job_id, owner_sent=owner_token)}}" method="post">
     <label for="Employee">Choose employee</label>
