--- a/templates/employees/employee_signup.html
+++ b/templates/employees/employee_signup.html
@@ -8,9 +8,9 @@ Employee Sign up
 <body>
 <h1>Employee Sign up</h1>
 <form action="{{url_for('employee_login_and_signup.employeesignupdata')}}" method="post">
-<input type="text" name="name" placeholder="Enter your name">
-<input type="text" name="email" placeholder="Enter your email">
-<input type="text" name="phone" placeholder="Enter your phone">
-<input type="text" name="password" placeholder="Password">
+<input type="text" name="name" placeholder="Enter your name" required>
+<input type="email" name="email" placeholder="Enter your email" required>
+<input type="tel" name="phone" placeholder="Enter your phone" required>
+<input type="password" name="password" placeholder="Password" required>
 <input type="submit" name="submit" value="submit">
 </form>
