--- a/templates/employees/employeelogin.html
+++ b/templates/employees/employeelogin.html
@@ -7,8 +7,8 @@
 <body>
 <h1>Employee Login</h1>
 <form action="{{url_for('employee_login_and_signup.employeelogindata')}}" method="post">
-<input type="text" name="email" placeholder="email">
-<input type="text" name="password" placeholder="Password">
+<input type="text" name="email" placeholder="email" required>
+<input type="password" name="password" placeholder="Password" required>
 <input type="submit">
 </body>
 </html>
