--- a/templates/employees/employeeportal.html
+++ b/templates/employees/employeeportal.html
@@ -8,7 +8,7 @@
 <h5>your token is {{your_token}}</h5>
 <h5> your id is {{your_id}}
 <form action="{{url_for('employee_datahandlers.addemployer', token_sent=your_token)}}" method="post">
-    <input type="text" name="employers_id" placeholder="employers id">
+    <input type="text" name="employers_id" placeholder="employers id" required>
     <input type="submit">
 </form>
 <h3>Employers:</h3>
