--- a/templates/employers/employerlogin.html
+++ b/templates/employers/employerlogin.html
@@ -7,8 +7,8 @@
 <body>
 <h1>Employer Login</h1>
 <form action="{{url_for('employer_signup_and_login.employerlogindata')}}" method="post">
-<input type="text" name="email" placeholder="email">
-<input type="text" name="password" placeholder="Password">
+<input type="email" name="email" placeholder="email" required>
+<input type="password" name="password" placeholder="Password" required>
 <input type="submit">
 </body>
 </html>
