--- a/templates/jobs/job_main.html
+++ b/templates/jobs/job_main.html
@@ -42,5 +42,15 @@ Remove Employee
     <li>{{employee_name_get['name']}}</li>
 {% endfor %}
 </ul>
+
+<h3>Your Employee Shifts</h3>
+<ul>
+{% set shifts = db.main.shifts.find({"job_id": job_id}) %}
+{% for shift in shifts %}
+    {% set employee_results = db.main.employee.find_one({"id":shift['employee']}) %}
+    
+    <li>Employee <b>{{employee_results['name']}}</b> Start time: <b>{{shift["start_time"]}} {{shift["start_date"]}}</b>: End time: <b>{{shift["end_time"]}} {{shift["end_date"]}}</b></li>
+{% endfor %}
+</ul>
 </body>
 </html>
