--- a/templates/jobs/job_main.html
+++ b/templates/jobs/job_main.html
@@ -48,8 +48,15 @@ Remove Employee
 {% set shifts = db.main.shifts.find({"job_id": job_id}) %}
 {% for shift in shifts %}
     {% set employee_results = db.main.employee.find_one({"id":shift['employee']}) %}
-    <li>Employee <b>{{employee_results['name']}}</b> Start time: <b>{{shift["start_time"]}} {{shift["start_date"]}}</b>: End time: <b>{{shift["end_time"]}} {{shift["end_date"]}}</b>: Total time: <b>{{shift["total_hours"]}}:{{shift['total_minutes']}}</b></li>
+    <li>Employee <b>{{employee_results['name']}}</b> Start time: <b>{{shift["start_time"]}} {{shift["start_date"]}}</b>: End time: <b>{{shift["end_time"]}} {{shift["end_date"]}}</b>: Total time: <b>{{shift['total_time']}}</b></li>
 {% endfor %}
 </ul>
+
+<h3>
+Make Invoice
+</h3>
+<form action="{{url_for('job_datahandlers.jobmakeinvoice', job_id_sent=job_id, owner_sent=owner_token)}}" method="post">
+    <input type="submit" value="Create Invoice">
+</form>
 </body>
 </html>
