--- a/templates/index.html
+++ b/templates/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <title>
-Kims homecare
+Scheduler Pro
 </title>
 </head>
 <body>
-<h1>Welcome to Kims homecare</h1>
+<h1>Welcome to totally cool scheduler</h1>
 <h2>Please log in</h2>
 <a href="{{url_for('getstarted')}}">Login or sign up</a>
 </body>
