--- a/templates/employees/manage_employer.html
+++ b/templates/employees/manage_employer.html
@@ -6,6 +6,7 @@ Manage {{employer_results_sent['name']}}
 </title>
 </head>
 <body>
+<a href="{{ url_for('employee_routes.employeemain')}}"> Back to portal</a>
 
 <form action="{{url_for('employer_datahandlers.quit_employer', employer_id_sent=employer_results_sent['id'], employee_token_sent=employee_results_sent['token'])}}", method="post">
 <input type="submit" name="manage_employee" value='Quit'>
