--- a/templates/employers/employer_signup.html
+++ b/templates/employers/employer_signup.html
@@ -2,15 +2,20 @@
 <html>
 <head>
 <title>
-employer sign up
+Sign up as employer
 </title>
+<link rel="stylesheet" href= "{{ url_for('static',filename='styles/employers/employer_signup.css') }}">
 </head>
 <body>
-<h1>employer sign up</h1>
+<h1>Employer sign up</h1>
 <form action="{{url_for('employer_signup_and_login.employersignupdata')}}" method="post">
 <input type="text" name="name" placeholder="Enter your name" required>
+<br>
 <input type="email" name="email" placeholder="Enter your email" required>
+<br>
 <input type="tel" name="phone" placeholder="Enter your phone" required>
+<br>
 <input type="password" name="password" placeholder="Password" required>
+<br>
 <input type="submit" name="submit" value="submit">
 </form>
