--- a/templates/jobs/job_main.html
+++ b/templates/jobs/job_main.html
@@ -4,7 +4,7 @@
 <title>Job portal</title>
 </head>
 <body>
-
+<a href="{{url_for('employer_routes.employermain')}}"> Back to portal</a>
 <h4>Owner is: {{owner}}</h4>
 <h4>
 Add Employee
