just like everyhting

--- a/templates/employees/employee_signup.html
+++ b/templates/employees/employee_signup.html
@@ -19,7 +19,7 @@ Employee Sign up
     <br>
     <input type="password" name="password" placeholder="Password" required>
     <br>
-    <input id="submit" type="submit" name="submit" value="Submit">
+    <input id="submit" type="submit" name="submit" value="Sign up">
     </form>
 </div>
 </body>
