--- a/templates/employers/employer_signup.html
+++ b/templates/employers/employer_signup.html
@@ -19,7 +19,7 @@ Sign up as employer
     <br>
     <input type="password" name="password" placeholder="Password" required>
     <br>
-    <input type="submit" name="submit" value="submit">
+    <input type="submit" name="Sign up" value="Sign up">
     </form>
 </div>
 </body>
