--- a/templates/employees/employeelogin.html
+++ b/templates/employees/employeelogin.html
@@ -9,6 +9,6 @@
 <form action="{{url_for('employee_login_and_signup.employeelogindata')}}" method="post">
 <input type="text" name="email" placeholder="email" required>
 <input type="password" name="password" placeholder="Password" required>
-<input type="submit">
+<input type="submit" name="Login" value="Login" />
 </body>
 </html>
