--- a/templates/employers/employerlogin.html
+++ b/templates/employers/employerlogin.html
@@ -9,6 +9,6 @@
 <form action="{{url_for('employer_signup_and_login.employerlogindata')}}" method="post">
 <input type="email" name="email" placeholder="email" required>
 <input type="password" name="password" placeholder="Password" required>
-<input type="submit">
+<input type="submit" name="Log in" value="Log in"/>
 </body>
 </html>
