--- a/templates/jobs/job_main.html
+++ b/templates/jobs/job_main.html
@@ -6,6 +6,7 @@
 <body>
 <a href="{{url_for('employer_routes.employermain')}}"> Back to portal</a>
 <h4>Owner is: {{owner}}</h4>
+<h4>Current price per hour is {{price_per_hour}}</h4>
 <h4>
 Add Employee
 </h4>
