--- a/templates/employers/employerlogin.html
+++ b/templates/employers/employerlogin.html
@@ -1,14 +1,20 @@
 <!DOCTYPE>
 <html>
 <head>
-<title>
-</title>
+    <title>
+        Employer login
+    </title>
+    <link rel="stylesheet" href= "{{ url_for('static',filename='styles/employers/employer_login.css') }}">
 </head>
 <body>
-<h1>Employer Login</h1>
-<form action="{{url_for('employer_signup_and_login.employerlogindata')}}" method="post">
-<input type="email" name="email" placeholder="email" required>
-<input type="password" name="password" placeholder="Password" required>
-<input type="submit" name="Log in" value="Log in"/>
+    <div id="placeholder"></div>
+    
+    <div id="login">
+        <h1>Employer Login</h1>
+        <form action="{{url_for('employer_signup_and_login.employerlogindata')}}" method="post">
+        <input type="email" name="email" placeholder="email" required>
+        <input type="password" name="password" placeholder="Password" required>
+        <input type="submit" name="Log in" value="Log in"/>
+    </div>
 </body>
 </html>
