added more links

--- a/templates/employees/employee_signup.html
+++ b/templates/employees/employee_signup.html
@@ -20,7 +20,9 @@ Employee Sign up
     <input type="password" name="password" placeholder="Password" required>
     <br>
     <input id="submit" type="submit" name="submit" value="Sign up">
+    <br>
     </form>
+    <a href="/employee/login/">Login</a>
 </div>
 </body>
 </html>
