--- a/templates/employees/employeelogin.html
+++ b/templates/employees/employeelogin.html
@@ -13,7 +13,9 @@
         <form action="{{url_for('employee_login_and_signup.employeelogindata')}}" method="post">
         <input type="text" name="email" placeholder="email" required>
         <input type="password" name="password" placeholder="Password" required>
-        <input type="submit" name="Login" value="Login" />
+        <input type="submit" name="Login" value="Login"/>
+        <br>
+        <a href="/employee/signup/">Signup</a>
     </div>
 </body>
 </html>
