--- a/templates/employers/employerlogin.html
+++ b/templates/employers/employerlogin.html
@@ -15,6 +15,9 @@
         <input type="email" name="email" placeholder="email" required>
         <input type="password" name="password" placeholder="Password" required>
         <input type="submit" name="Log in" value="Log in"/>
+        <br>
+        <a href="/employer/signup/">Signup</a>
     </div>
+
 </body>
 </html>
