--- a/templates/employers/employerportal.html
+++ b/templates/employers/employerportal.html
@@ -1,40 +1,40 @@
 <!DOCTYPE>
 <html>
 <head>
-<title>Welcome {{name}}</title>
+    <title>Welcome {{name}}</title>
+    <link rel="stylesheet" href= "{{ url_for('static',filename='styles/employers/employer_portal.css') }}">
 </head>
 <body>
-<form action="{{ url_for('employer_datahandlers.employerlogout') }}" method="post">
-<input type="submit" name="logout" value="Logout">
-</form>
-<h2>{{name}}'s portal</h2>
-<h4>Your id is "{{your_id}}"</h4>
-<h4>your token is "{{your_token}}"
-{% set jobs = db.main.jobs.find({"owner": your_token}) %}
-<h3>Employees:</h3>
-<ul>
-{% for employee in employees %}
-    {% set return = db.main.employee.find_one({"id": employee}) %}
-    <li><a href="{{url_for('employer_routes.manage_employee', employee_id_sent=return['id'])}}"> {{return["name"]}}</a></li>
-{% endfor %}
-</ul>
+    <form action="{{ url_for('employer_datahandlers.employerlogout') }}" method="post">
+    <input type="submit" name="logout" value="Logout">
+    </form>
+    <h2>{{name}}'s portal</h2>
+    <h4>Your id is "{{your_id}}"</h4>
+    {% set jobs = db.main.jobs.find({"owner": your_token}) %}
+    <h3>Employees:</h3>
+    <ul>
+    {% for employee in employees %}
+        {% set return = db.main.employee.find_one({"id": employee}) %}
+        <li><a href="{{url_for('employer_routes.manage_employee', employee_id_sent=return['id'])}}"> {{return["name"]}}</a></li>
+    {% endfor %}
+    </ul>
 
-<h4>
-Add Job
-</h4>
-<form action="{{url_for('job_datahandlers.jobcreate', token_sent=your_token)}}" method="post">
-    <input type="text" name="job_name" placeholder="Job name" required>
-    <input type="text" name="price_per_hour" placeholder="Price per hour" required>
-    <input type="submit">
-</form>
-<h3>
-Jobs
-</h3>
-<ul>
-{% for job in jobs: %}
-    {% set employer_token = your_token %}
-<li><a href="{{url_for('job_routes.jobmain', job_id_sent=job['id'])}}"> {{job["name"]}}</li>
-{% endfor %}
-</ul>
+    <h4>
+    Add Job
+    </h4>
+    <form action="{{url_for('job_datahandlers.jobcreate', token_sent=your_token)}}" method="post">
+        <input type="text" name="job_name" placeholder="Job name" required>
+        <input type="text" name="price_per_hour" placeholder="Price per hour" required>
+        <input type="submit">
+    </form>
+    <h3>
+    Jobs
+    </h3>
+    <ul>
+    {% for job in jobs: %}
+        {% set employer_token = your_token %}
+    <li><a href="{{url_for('job_routes.jobmain', job_id_sent=job['id'])}}"> {{job["name"]}}</li>
+    {% endfor %}
+    </ul>
 </body>
 </html>
