--- a/templates/employers/employerportal.html
+++ b/templates/employers/employerportal.html
@@ -24,7 +24,7 @@
     </h4>
     <form action="{{url_for('job_datahandlers.jobcreate', token_sent=your_token)}}" method="post">
         <input type="text" name="job_name" placeholder="Job name" required>
-        <input type="text" name="price_per_hour" placeholder="Price per hour" required>
+        <input type="number" min=0 step=0.01 name="price_per_hour" placeholder="Price per hour" required>
         <input type="submit">
     </form>
     <h3>
